<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/centerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/title1"
            android:inputType="text" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/descriptioninput"
            android:layout_marginTop="8dp"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/pickTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:backgroundTint="@color/black"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/saveTask"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_primary"
            android:text="@string/addtask"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
