<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/centerLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/title1"
            android:inputType="text" />

        <EditText
            android:id="@+id/descriptionEdit"
            tools:ignore="Autofill,TextFields"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:hint="@string/descriptioninput" />

        <Button
            android:id="@+id/pickTimeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"
            android:text="@string/pick_time" />

        <Button
            android:id="@+id/editTask"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/edittask" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>