<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="12dp">

        <!-- خط ملون على اليسار -->
        <View
            android:id="@+id/left_indicator"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@color/primary_color"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/left_indicator"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primary_color"/>

            <TextView
                android:id="@+id/task_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_00_am"
                android:textSize="12sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>


        <ImageView
            android:id="@+id/task_status"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:importantForAccessibility="no"
            android:src="@drawable/done_icon"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
      />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
